--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@prisma/client": "^6.17.1",
     "better-auth": "1.3.24",
     "hono": "4.6.0",
+    "openai": "^6.21.0",
     "zod": "4.1.11"
   }
 }
-
